--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,29 @@
 name: Run Locust Tests on Commit
+
 on:
   push:
-  branches:
-    - main
+    branches:
+      - main
+
 jobs:
-   locust-test:
-   runs-on: ubuntu-latest
-   steps:
-     - name: Check out the repository
-       uses: actions/checkout@v2
-     - name: Set up Python
-       uses: actions/setup-python@v2
-       with:
-         python-version: ’3.10’
-     - name: Install dependencies
-       run: |
-         python -m pip install --upgrade pip
-         pip install flask
-         pip install locust
-     - name: Start Flask server
-       run: |
-         python3 server.py &
-         echo "Waiting for Flask server to start"
-         sleep 30
+  locust-test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repository
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flask locust
+
+      - name: Start Flask server
+        run: |
+          python3 server.py &
+          echo "Waiting for Flask server to start"
+          sleep 30
