--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,15 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flask locust
+          pip install -r requirements.txt
 
       - name: Start Flask server
         run: |
           python3 server.py &
           echo "Waiting for Flask server to start"
           sleep 30
+
+      - name: Run Locust load test
+        run: |
+          locust --locustfile=locust.py --headless --users 10000 --spawn-rate 100 \
+          --run-time 2m --host=http://127.0.0.1:5100
